styles.css
body{
 font-family: Roboto, sans-serif, Helvetica;
 margin: 0;
}

.section-one,
.footer{
    background-color: #1f2937;
}

.section-one .header-logo{
    color: #f9faf8;
    font-size: 24px;
    margin-left: 70px;
}

.header-links{
    list-style: none;
    display: flex;
    flex-direction: row;
    gap: 25px;
    padding: 0;
}

.headers{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    margin-bottom: 25px;
}

.section-one h1{
    font-size: 48px;
    font-weight: 900;
    color: #f9faf8;
    width: 450px;
    margin-bottom: 0;
}

.section-one p,
.header-links{
    font-size: 18px;
    color: #e5e7eb;
}

.sign-up{
    background-color: #3882f6;
    padding: 8px 25px;
    color: #f9faf8;
    border-radius: 6px;
    font-weight: bold;
    font-size: 17px; 
    border: 0;
}

.section-one{
    display: flex;
    flex-direction: column;
    height: 700px;
}

.content-one{
    display: flex;
    justify-content: space-evenly;
    align-items: center;

}

.section-one p{
    width: 500px;
    margin-top: 0;
}

.section-two h1{
    margin: 30px 0px;
    text-align: center;
    font-size: 36px;
    font-weight: 900;
    color: #1f2937;
}

.image-list{
    display: flex;
    justify-content: center;
    gap: 50px;
    list-style: none;
}
.image-list img{
    border: 5px solid #3882f6;
    border-radius: 10px;
}

.image-list p{
    height: 75px;
    width: 150px;
    text-align: center;
    margin-top: 5px;
    margin-left: 20px;
    font-size: 18px;
    color: gray;
}

.section-two{
    margin-bottom: 110px;
}

.section-three{
    background-color: #e5e7eb;
    padding: 100px 0px;
    display: flex;
    justify-content: center;
    align-content: center;
}

.section-three p{
    font-size: 36px;
    color: #1f2937;
    font-weight: 300;
}

.section-three .full-quote{
    width: 700px;
    height: 300px;
}

